# karat

./: .gitignore  CLAUDE.md  DECISIONS.md  conftest.py  data_contract.md  pyproject.toml
.claude/: settings.local.json
karat/: cli.py  config.py  datasource.py  metrics.py  mock_source.py  models.py  narrate.py  reasons.py  report.py
tests/: test_metrics.py  test_mock_source.py  test_reasons.py  test_report.py
