[project]
name = "karat"
version = "0.1.0"
description = "Ranks business.com paid-search campaigns by real downstream profit and explains why leads fail to match."
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "pydantic>=2.0",
    "anthropic>=0.40",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["karat"]

[tool.pytest.ini_options]
testpaths = ["tests"]
